# ATRGNFP_buy_classifier

./: .gitignore  README.md  config.yaml  demo.ipynb  docker-compose.yaml  docker-compose1.yaml  main.py  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: deployment_dag.py
dags/: deployment_dag.py
data/raw/: ATRGFNP_hist.csv  ATRGFNP_hist_with_buy_signals.csv
docker/: airflow.Dockerfile  fast_api.Dockerfile  mlflow.Dockerfile
docs/: architecture_diagram.md  data_dictionary.md  dataset.md  drift_plan.md
src/data/: get_data.py
src/features/: transform.py  transform_functions.py
